Initial edits and basic structure added

--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
-!doctype HTML
-<HTML>
-
-
+<!DOCTYPE html>
+<!--Created By Aadil Chasmawala, May 2024-->
+<!--For Communications Lab Project 2 by Aadil Chasmawala, Aayat Azim, Nisa Shahid and Bismark Buernotey Buer-->
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>11th_Hour_Heroic</title>
+     <!--Linking CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css.map" rel="stylesheet">
+    <link href="styles.css" rel = "stylesheet">
     
-</HTML>
+</head>
+<body>
+    <div class = "introduction">
+        <h1 class ="mainHeading">11th Hour Heroic</h1>
+        <h2>A Comic Strip By Aadil Chasmawala, Aayat Azim, Nisa Shahid and Bismark Buernotey Buer</h2>
+    </div>
+</body>
+</html>
