Added animations to text

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
                 <div class="swiper-slide" data-id="start">
                     <img src="panels/title.jpg" alt="">
                 </div>
-                <div class="swiper-slide" >
+                <div class="swiper-slide" data-id="1" >
                     <img src="panels/panel 1 and 7.jpg" alt="">
                 </div>
-                <div class="swiper-slide">
+                <div class="swiper-slide" data-id="2">
                     <img src="panels/panel2.jpg" alt="">
                 </div>
-                <div class="swiper-slide">
+                <div class="swiper-slide" data-id="3">
                     <img src="panels/panel3.jpg" alt="">
                 </div>
-                <div class="swiper-slide">
+                <div class="swiper-slide" data-id="4">
                     <img src="panels/panel4.jpg" alt="">
                 </div>
                 <div class="swiper-slide" data-id="choice">
@@ -41,6 +41,7 @@
             <div class="swiper-button-prev"></div>
             <div class="swiper-button-next"></div>
             <button id = "home-button">Return to Home</button>
+            <h2 id ="choice-text">Make a Choice!!</h2>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
