--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="mainContainer">
-        <h1 class="mainHeading">11th Hour Heroic</h1>
+        <!--<h1 class="mainHeading">11th Hour Heroic</h1>-->
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide" data-id="start">
@@ -42,6 +42,8 @@
             <div class="swiper-button-next"></div>
             <button id = "home-button">Return to Home</button>
             <h2 id ="choice-text">Make a Choice!!</h2>
+            <audio id="hum" src="audio/hum.mp3" >
+            </audio>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
