polishing and fixing heading + margins

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="mainContainer">
-        <!--<h1 class="mainHeading">11th Hour Heroic</h1>-->
+        <h1 class="mainHeading"></h1>
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide" data-id="start">
