--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="swiper-slide" data-id="start">
                     <img src="panels/title.jpg" alt="">
                 </div>
-                <div class="swiper-slide" data-id="1" >
+                <div class="swiper-slide" data-id="start" >
                     <img src="panels/panel 1 and 7.jpg" alt="">
                 </div>
                 <div class="swiper-slide" data-id="2">
