added audio files and updated index.html, script.js and styles.css

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="swiper-slide" data-id="start">
                     <img src="panels/title.jpg" alt="">
                 </div>
-                <div class="swiper-slide" data-id="start" >
+                <div class="swiper-slide" data-id="1" >
                     <img src="panels/panel 1 and 7.jpg" alt="">
                 </div>
                 <div class="swiper-slide" data-id="2">
@@ -43,6 +43,24 @@
             <button id = "home-button">Return to Home</button>
             <h2 id ="choice-text">Make a Choice!!</h2>
             <audio id="hum" src="audio/hum.mp3" >
+            </audio>
+            <audio id="fail" src="audio/fail.mp3" >
+            </audio>
+            <audio id="yay" src="audio/yay.mp3" >
+            </audio>
+            <audio id="alarm" src="audio/alarm.mp3" >
+            </audio>
+            <audio id ="heart_beat" src="audio/heart_beat.mp3">
+            </audio>
+            <audio id ="huh" src="audio/huh.mp3">
+            </audio>
+            <audio id ="motivation" src="audio/motivation.mp3">
+            </audio>
+            <audio id ="sunrise" src="audio/sunrise.mp3">
+            </audio>
+            <audio id ="surprise" src="audio/surprise.mp3">
+            </audio>
+            <audio id ="chatgpt" src="audio/chatgpt.mp3">
             </audio>
         </div>
     </div>
