Arranged heading, refined comments

--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--Created by Aadil Chasmawala to host 11th Hour Heroics-->
+<!-- for CL, May 2024-->
+<!--A comic strip created by Aadil Chasmawala, Aayat Azim, Nisa Shahid and Bismark Buernortey Buer-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
