--- a/index.html
+++ b/index.html
@@ -72,5 +72,17 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="script.js"></script>
+    <footer class="footer">
+        <div class="footer-left">
+            <p>Copyrights reserved 2024</p>
+        </div>
+        <div class="footer-right">
+            <a href="mailto:aac10066@nyu.edu">aac10066@nyu.edu</a>
+            <a href="mailto:bb3621@nyu.edu">bb3621@nyu.edu</a>
+            <a href="mailto:aa8611@nyu.edu">aa8611@nyu.edu</a>
+            <a href="mailto:ns5276@nyu.edu">ns5376@nyu.edu</a>
+        </div>
+    </footer>
+    
 </body>
 </html>
