updated title and favicon

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>11th_Hour_Heroic</title>
+    <title>11th_Hour_Heroics</title>
+    <link rel="icon" type="image/x-icon" href="panels/loading.jpeg">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <link href="styles.css" rel="stylesheet">
