Removed next button before starting the game

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                     </div>
                 </div>
             </div>
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev" ></div>
+            <div class="swiper-button-next" id ="swiper-button-next"></div>
             <button id = "home-button">Return to Home</button>
             <h2 id ="choice-text">Make a Choice!!</h2>
             <audio id="hum" src="audio/hum.mp3" >
